# llm-wc

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
config/: aime_2025.yaml  gpqa.yaml  gpqa_diamond.yaml  mmlu_pro.yaml  swebench_ollama.yaml
docs/: benchmarks.md  datasets.md  developer_notes.md  queue.md  structure.md  swebench_ollama_workflow.md  technicals.md  wc-queue.md
notebooks/: _dev_setup.py  aime_2025.ipynb  gpqa.ipynb  mmlu_pro.ipynb  playground.ipynb
results/aime_2025_20260127T053405Z/: config.yaml  run.json
results/aime_2025_20260127T053405Z/models/gpt-oss_latest/: results.json  summary.json
results/aime_2025_20260127T053405Z/models/qwen3-coder_30b/: results.json  summary.json
results/aime_2025_20260127T053405Z/models/qwen3_30b/: results.json  summary.json
results/mmlu_pro_20260126T041146Z/: config.yaml  run.json
results/mmlu_pro_20260126T041146Z/models/gemma3_27b/: summary.json
results/mmlu_pro_20260126T041146Z/models/gpt-oss_latest/: results.json  summary.json
results/mmlu_pro_20260126T041146Z/models/qwen3-coder_30b/: results.json  summary.json
results/mmlu_pro_20260126T041146Z/models/qwen3_30b/: summary.json
results/mmlu_pro_20260126T061624Z/: config.yaml  run.json
results/mmlu_pro_20260126T061624Z/models/gemma3_27b/: results.json  summary.json
results/mmlu_pro_20260126T154345Z/: config.yaml  run.json
results/mmlu_pro_20260126T154345Z/models/gpt-oss_latest/: results.json  summary.json
results/mmlu_pro_20260126T154345Z/models/qwen3-coder_30b/: summary.json
results/mmlu_pro_20260126T154345Z/models/qwen3_30b/: results.json  summary.json
scripts/: eval_swebench_verified.sh  run_aime_2025.py  run_gpqa.py  run_mmlu_pro.py  run_swebench_verified.sh
src/llm_wc/: aime_2025.py  bench_cli.py  bench_utils.py  gpqa.py  hf_utils.py  matharena.py  mmlu_pro.py
src/llm_wc/client/: __init__.py  config.py  manager.py  ollama.py  types.py
src/llm_wc/client/providers/: anthropic.py  base.py  openai.py
src/llm_wc/core/: __init__.py  dataset.py  eval.py  mcqa.py  questions.py
(+3 files in other folders)
